refactor(validation): 用 EnumValue 替换 In 注解实现枚举校验
- 移除 In 注解及其验证器，新增 EnumValue 注解及对应验证器
- EnumValue 支持通过枚举类的 getValue 方法校验合法值
- 迁移部门状态字段校验，使用 EnumValue 配合 Status 枚举实现
- 优化 UsernameValidator，内置用户名正则表达式，移除外部常量依赖
- 重构 OpsJob 和 OpsJobLog 模块接口，统一方法命名为 get
- 统一 System 模块中常量包结构与命名，调整配置和权限常量
- 新增系统相关枚举类型，完善代码表达
- SysDeptApiImpl 优化批量查询部门名称逻辑，保证顺序与完整性
- 统一权限检查注解，替换旧常量为 SystemPermission 类常量
- 重构系统事件类结构，拆分事件常量为独立类
- 调整代码项目包结构，增强代码组织便于维护